--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div class="form_controls__item">
                         <div class="form_controls__control">
                             <label class="form_controls__label" for="commit_message">Commit text message</label>
-                            <input id="commit_message" type="text" placeholder="Here write your commit description" size="60"/>
+                            <input class="form_controls__commit_message" id="commit_message" type="text" placeholder="Here write your commit description" size="60"/>
                         </div>
                         <div class="form_controls__description">
                             <p>Write what you do in this commit</p>
@@ -48,12 +48,24 @@
                     <div class="form_controls__item">
                         <div class="form_controls__control">
                             <label class="form_controls__label" for="commit_timestamp">Commit timestamp</label>
-                            <input id="commit_timestamp" type="text" size="30"/>
+                            <input class="form_controls__commit_time" id="commit_timestamp" type="text" size="30"/>
                         </div>
                         <div class="form_controls__description">
                             <p>Here will be a timestamp selector</p>
                         </div>
                     </div>
+                </div>
+                <div class="form_actions">
+                    <div class="form_controls__item">
+                        <div class="form_controls__control">
+                            <label class="form_controls__label" for="commit_timestamp">Press button to generate commit description</label>
+                            <button class="form_actions__generate_button">Generate</button>
+                        </div>
+                        <div class="form_controls__description">
+                            <textarea class="form_control__commit_full_description" id="commit_full_description" name="commit_full_description" rows="4" cols="50">Here will be a commit full description</textarea>
+                        </div>
+                    </div>
+                    
                 </div>
             </form>
         </div>
